--- a/spec/acceptance/nodesets/docker/ubuntu-14.04.yml
+++ b/spec/acceptance/nodesets/docker/ubuntu-14.04.yml
@@ -6,11 +6,11 @@ HOSTS:
       - database
     platform: ubuntu-14.04-amd64
     hypervisor: docker
-    image: ubuntu:14.04
+    image: jared314:ubuntu-14-04-java8
     docker_preserve_image: true
     docker_cmd: '["/sbin/init"]'
     docker_image_commands:
       # ensure that upstart is booting correctly in the container
-      - 'rm /usr/sbin/policy-rc.d && rm /sbin/initctl && dpkg-divert --rename --remove /sbin/initctl && apt-get update && apt-get install openjdk-8-jre && apt-get install -y net-tools wget && locale-gen en_US.UTF-8'
+      - 'rm /usr/sbin/policy-rc.d && rm /sbin/initctl && dpkg-divert --rename --remove /sbin/initctl && apt-get update && apt-get install -y net-tools wget && locale-gen en_US.UTF-8'
 CONFIG:
 trace_limit: 200
